[package]
name = "vdl"
version = "0.1.0"
edition = "2024"
authors = ["shixinhuang99 <shixinhuang99@gmail.com>"]
description = "A yt-dlp wrapper desktop client for macOS built with gpui"
repository = "https://github.com/shixinhuang99/vdl"
publish = false

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
